--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
 
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900&subset=latin,greek,greek-ext,vietnamese,cyrillic-ext,latin-ext,cyrillic'
           rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="leaflet.contextmenu.min.css">
 
     <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon-16x16.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon-32x32.png">
@@ -79,6 +80,20 @@
         .leaflet-verticalcenter .leaflet-control {
             margin-bottom: 10px;
         }
+        .leaflet-control-zoom {
+            left: 5px;
+            top: 300px;
+        }
+
+        .leaflet-control-layers {
+            left: 5px;
+            top: 300px;
+        }
+
+        .leaflet-touch .leaflet-control-attribution {
+            display: none;
+        }
+
 
         #map-wrapper {
             width: 100%;
@@ -157,6 +172,7 @@
 <!--PDF-->
 <script src="../bower_components/jspdf/dist/jspdf.min.js"></script>
 <script src="../bower_components/html2canvas/build/html2canvas.min.js"></script>
+<script src="leaflet.contextmenu.min.js"></script>
 
 <!--Socket-->
 
@@ -241,8 +257,6 @@
         </div>
     </div>
 </script>
-
-
 
 
 </body>
