--- a/src/index.html
+++ b/src/index.html
@@ -79,15 +79,32 @@
 
         .leaflet-verticalcenter .leaflet-control {
             margin-bottom: 10px;
+            background-color: #2b2b2b;
+
         }
-        .leaflet-control-zoom {
-            left: 5px;
-            top: 300px;
+        leaflet-control-zoom-in,
+        .leaflet-control-zoom-out {
+            float:right;
+            font: bold 18px 'Lucida Console', Monaco, monospace;
+            text-indent: 1px;
         }
+        .leaflet-control-zoom-out {
+            font-size: 20px;
+        }
+
+        .leaflet-touch .leaflet-control-zoom-in {
+            font-size: 22px;
+        }
+        .leaflet-touch .leaflet-control-zoom-out {
+            font-size: 24px;
+        }
+
+
+
 
         .leaflet-control-layers {
             left: 5px;
-            top: 300px;
+            top: 350px;
         }
 
         .leaflet-touch .leaflet-control-attribution {
